# NeuroVault

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE-COVENANT.md  FILE-INDEX.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  graph-preview.html  index.html  llms.txt  package-lock.json  package.json  playwright.config.ts  preview.html  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: app-store-check.yml  ci.yml  npm-release.yml  pages.yml  release-vscode.yml  release.yml  security.yml
LICENSES/: MPL-2.0-COVERED-SOURCE.md  NATIVE-NOTICE-SOURCES.json  THIRD-PARTY-LICENSES.txt
benchmarks/: run_agentic.py  run_recall.py
demo-video/: package-lock.json  package.json  tsconfig.json
dist-npm/: .gitignore  README.md  WINDOWS-TEST.md  package.json
docs/: APP-STORE-READINESS.md  BUILDING_SIDECAR.md  COMMERCIAL-STRATEGY.md  CONSUMER-ROADMAP.md  DISTRIBUTION-READINESS.md  HANDOFF.md  HOW-NEUROVAULT-WORKS.md  LICENSING.md  MACOS-RELEASE.md  ROADMAP-vs-agentmemory.md  TROUBLESHOOTING.md  UPDATER-SETUP.md  ambient-recall.md  api-gateway-design.md  api.md  consumer-feature-map.md  hybrid-code-intelligence-notes.md  python-server-reference.md  recall-target-architecture.md  reference.html  retrieval-state.md  sync-architecture.md
e2e/: consumer-smoke.spec.ts
eval/: README.md  run_eval.py  testset.jsonl
scripts/: app-store-model.mjs  build-app-store.mjs  build-headless.mjs  fetch-app-store-model.mjs  fetch-native-license-files.mjs  gates.sh  gen_third_party_notices.sh  generate-third-party-notices.mjs  launch-neurovault.bat  launch-neurovault.vbs  make-app-icon.py  make-dmg-background.py  migrate_layout.py  neurovault_logo.py  organize_notes.py  pin-legacy-installer.ps1  preview-shoot.mjs  record_session_memories.py  release-hardening.test.mjs  run-lib-tests.mjs  stage-sidecar.mjs  update-logo.py  verify-app-store-model.mjs  verify-appstore-source.mjs  verify-macos-release.sh  verify-release-assets.mjs  verify-release-config.mjs
server/: README.md  engram-server.spec  engram_server.spec  mcp_proxy.py  neurovault_server.spec  pyproject.toml
server/benchmarks/: bench_longmemory.py  bench_usefulness.py
server/engram_server/: __main__.py  api.py  bm25_index.py  brain.py  brain_export.py  call_graph.py  chunker.py  code_ingest.py  config.py  consolidation.py  database.py  dissertation.py  drafts.py  embeddings.py  entities.py  graph_report.py  hooks.py  impact.py  ingest.py  insight_extractor.py  intelligence.py  karpathy.py  observation_rollup.py  pandoc_export.py  pdf_ingest.py  proactive.py  query_affinity.py  retrieval_feedback.py  retriever.py  review_context.py  server.py  strength.py  variable_tracker.py  watcher.py  write_back.py  zotero.py
server/neurovault_server/: __main__.py  api.py  ast_extractors.py  audit.py  bm25_index.py  brain.py  brain_export.py  call_graph.py  chunker.py  code_ingest.py  compiler.py  config.py  consolidation.py  conversation_log.py  core_memory.py  database.py  dissertation.py  drafts.py  embeddings.py  entities.py  git_backup.py  graph_report.py  hooks.py  impact.py  ingest.py  insight_extractor.py  intelligence.py  js_sdk.py  karpathy.py  observation_rollup.py  pandoc_export.py  pdf_ingest.py  proactive.py  query_affinity.py  retrieval_feedback.py  retriever.py  review_context.py  server.py  strength.py  summaries.py  (+5 more)
server/neurovault_server/cli/: __init__.py  compile.py
server/scripts/: backfill_summaries.py  engram_hook.py  install.py  install_hooks.py  neurovault_hook.py  smoke_test.py
server/tests/: conftest.py  test_api_e2e.py  test_bm25_debounce.py  test_call_graph.py  test_chunker.py  test_consolidation.py  test_core_memory.py  test_database.py  test_dissertation.py  test_embeddings.py  test_hooks.py  test_impact.py  test_ingest.py  test_insight_extractor.py  test_intelligence.py  test_karpathy.py  test_observation_rollup.py  test_proactive.py  test_query_affinity.py  test_retrieval_feedback.py  test_retriever.py  test_retriever_2026.py  test_retroactive_links.py  test_review_context.py  test_spread.py  test_strength.py  test_summaries.py  test_todos.py  test_variable_tracker.py  test_write_back.py
site/: index.html
src/: App.shortcuts.test.tsx  App.tsx  graph-preview-main.tsx  index.css  main.tsx  preview-main.tsx
src-tauri/: Cargo.toml  Info.appstore.plist  PrivacyInfo.xcprivacy  build.rs  rust-toolchain.toml  tauri.appstore.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: app-store.json  default.json  employee-manager.json  minitab.json
src-tauri/icons/: _crop_logo.py  icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/memory/: ambient.rs  api_audit.rs  api_gateway.rs  api_keys.rs  bm25.rs  chunker.rs  cluster_state.rs  core_memory.rs  db.rs  diagnostic.rs  embedder.rs  employee.rs  entities.rs  facts.rs  graphify.rs  hooks.rs  http_server.rs  inbox.rs  ingest.rs  journal.rs  migrations.rs  mod.rs  pagerank_state.rs  paths.rs  port_recovery.rs  preference.rs  query_parser.rs  read_ops.rs  recall_cache.rs  related.rs  reranker.rs  retriever.rs  roles.rs  rrf.rs  schema.sql  source_mirror.rs  spread.rs  sqlite_vec.rs  summaries.rs  text.rs  (+6 more)
src-tauri/src/memory/adaptive/: composer.rs  consolidate.rs  mod.rs  orchestrator.rs  proposals.rs  recipes.rs  router.rs  salience.rs  temporal.rs  types.rs
src-tauri/src/memory/handlers/: mod.rs
src-tauri/src/memory/mcp/: forward.rs  instructions.txt  mod.rs  registry.rs  server.rs  tools.json
src-tauri/tests/: adaptive_scenario.rs  graphify_integration.rs  notes_scope.rs  retrieval_integration.rs
vscode-extension/: .gitignore  .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
website/: README.md  index.html  script.js  styles.css
(+280 files in other folders)
