[project]
name = "neurovault-mcp-proxy"
version = "0.3.0"
description = "Thin MCP-stdio ↔ HTTP forwarder for NeuroVault. The real backend lives in Rust."
requires-python = ">=3.13"

# server/ used to host a full Python NeuroVault server (~18.6k LOC,
# fastembed + sqlite-vec + fastapi + sentence-transformers + ...) but
# that's been deleted in favour of the Rust backend at
# src-tauri/target/release/neurovault-server.exe.
#
# What's left in server/ is two tiny stdio shims:
#   * mcp_proxy.py            — Claude clients spawn this; it forwards
#                                MCP JSON-RPC to http://127.0.0.1:8765
#   * scripts/neurovault_hook.py — Claude Code lifecycle hook events
#                                  POST to /api/observations
#
# Neither shim loads ML models, opens SQLite, or holds long-lived
# state. The only runtime dep is the `mcp` SDK for the FastMCP stdio
# transport — everything else is stdlib (urllib, json, os, argparse).
# Cold start is sub-second; resident RAM is ~30 MB per spawned proxy.
#
# See docs/python-server-reference.md for what the deleted package
# used to contain and the design notes worth keeping.
dependencies = [
    "mcp[cli]>=1.6.0",
]
