[package]
name = "engram"
version = "0.1.0"
description = "AI-native memory system for Claude"
authors = ["you"]
edition = "2021"

[lib]
name = "engram_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
slug = "0.1"
dirs = "6"
